; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_prot.c_setprivexec.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_prot.c_setprivexec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }
%struct.setprivexec_args = type { i64 }

@value32 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @setprivexec(%struct.TYPE_3__* %0, %struct.setprivexec_args* %1, i32* %2) #0 {
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca %struct.setprivexec_args*, align 8
  %6 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store %struct.setprivexec_args* %1, %struct.setprivexec_args** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load i32, i32* @value32, align 4
  %8 = load %struct.setprivexec_args*, %struct.setprivexec_args** %5, align 8
  %9 = getelementptr inbounds %struct.setprivexec_args, %struct.setprivexec_args* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = call i32 @AUDIT_ARG(i32 %7, i64 %10)
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32*, i32** %6, align 8
  store i32 %14, i32* %15, align 4
  %16 = load %struct.setprivexec_args*, %struct.setprivexec_args** %5, align 8
  %17 = getelementptr inbounds %struct.setprivexec_args, %struct.setprivexec_args* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  %20 = zext i1 %19 to i32
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  store i32 %20, i32* %22, align 4
  ret i32 0
}

declare dso_local i32 @AUDIT_ARG(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
